quick edit to see if I'm running binder correctly

--- a/julia_rnn.ipynb
+++ b/julia_rnn.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Minimal Recurrent Neural Network in Julia\n",
+    "## Michael's Minimal Recurrent Neural Network in Julia\n",
     "This is an implementation of the simplest RNN model presented in Andrei Karpathy's awesome article, [\"The Unreasonable Effectiveness of Recurrent Neural Networks\"](http://karpathy.github.io/2015/05/21/rnn-effectiveness/), written in [Julia](http://julialang.org/).\n",
     "\n",
     "Karpathy presents a 100-line [\"minimal recurrent nerual network\"](https://gist.github.com/karpathy/d4dee566867f8291f086), written in Python. This notebook reimplements the model and training code, aiming less to be short and more to be clear and instructive.\n",
